fix: remove hint hover, fix border layout shift

--- a/scss/_hint.scss
+++ b/scss/_hint.scss
@@ -21,7 +21,10 @@ span.TridactylHint {
 }
 
 .TridactylHintElem {
-  border: none;
   border-radius: 5px;
   outline: 1px dotted var(--foreground-4) !important;
+
+  &:hover {
+    outline-offset: 0;
+  }
 }
